@@ -1,0 +1,224 @@
+\name{cforest}
+\alias{cforest}
+\alias{boot}
+\alias{sampsplit}
+\alias{predict.cforest}
+\title{
+  Conditional Random Forests
+}
+\description{
+  An implementation of the random forest and bagging ensemble algorithms
+  utilizing conditional inference trees as base learners.
+}
+\usage{
+cforest(formula, data, weights, subset, na.action = na.pass, control = ctree_control(...), 
+        ytrafo = NULL, scores = NULL, ntree = 500L, perturbe = sampsplit(fraction = 0.632), 
+        mtry = ceiling(sqrt(nvar)), myapply = lapply, ...)
+boot()
+sampsplit(fraction = 0.632)
+\method{predict}{cforest}(object, newdata = NULL, type = c("weights", "response", "prob"),
+        OOB = FALSE, FUN = NULL, simplify = TRUE, ...)
+}
+\arguments{
+  \item{formula}{ a symbolic description of the model to be fit. }
+  \item{data}{ a data frame containing the variables in the model. }
+  \item{subset}{ an optional vector specifying a subset of observations to be
+                 used in the fitting process.}
+  \item{weights}{
+    an optional vector of weights to be used in the fitting
+    process. Non-negative integer valued weights are
+    allowed as well as non-negative real weights.
+    Observations are sampled (with or without replacement)
+    according to probabilities \code{weights / sum(weights)}.
+    The fraction of observations to be sampled (without replacement)
+    is computed based on the sum of the weights if all weights
+    are integer-valued and based on the number of weights greater zero
+    else. Alternatively, \code{weights} can be a double matrix defining
+    case weights for all \code{ncol(weights)} trees in the forest directly.
+    This requires more storage but gives the user more control.}
+  \item{na.action}{a function which indicates what should happen when the data
+                   contain missing value.}
+  \item{control}{a list with control parameters, see
+                 \code{\link{ctree_control}}.}
+  \item{ytrafo}{an optional named list of functions to be applied to the response
+                variable(s) before testing their association with the explanatory
+                variables. Note that this transformation is only
+                performed once for the root node and does not take weights into account.
+                Alternatively, \code{ytrafo} can be a function of \code{data} and
+                \code{weights}. In this case, the transformation is computed for
+                every node. This feature is experimental and the user interface
+                likely to change.}
+  \item{scores}{an optional named list of scores to be attached to ordered
+                factors.}
+  \item{ntree}{
+    Number of trees to grow for the forest.}
+  \item{perturbe}{
+    a function (with argument \code{weights}) for computing resampling weights.}
+  \item{mtry}{
+    number of input variables randomly sampled as candidates
+    at each node for random forest like algorithms. Bagging, as special case
+    of a random forest without random input variable sampling, can
+    be performed by setting \code{mtry} either equal to \code{Inf} or
+    manually equal to the number of input variables.}
+  \item{myapply}{
+    a possibly parallelizsed version of \code{\link{lapply}}.}
+  \item{fraction}{
+    fraction of number of observations to draw without
+    replacement.}
+  \item{object}{
+    An object as returned by \code{cforest}}
+  \item{newdata}{
+    An optional data frame containing test data.}
+  \item{type}{
+    a character string denoting the type of predicted value
+          returned, ignored when argument \code{FUN} is given.  For
+          \code{"response"}, the mean of a numeric response, the predicted
+          class for a categorical response or the median survival time for a
+          censored response is returned.  For \code{"prob"} the matrix of
+          conditional class probabilities (\code{simplify = TRUE}) or a list
+          with the conditional class probabilities for each observation
+          (\code{simplify = FALSE}) is returned for a categorical response.
+          For numeric and censored responses, a list with the empirical
+          cumulative distribution functions and empirical survivor functions
+          (Kaplan-Meier estimate) is returned when \code{type = "prob"}.
+          \code{"weights"} returns an integer vector of prediction weights.}
+  \item{OOB}{
+    a logical defining out-of-bag predictions (only if \code{newdata = NULL}).}
+  \item{FUN}{
+    a function to compute summary statistics. Predictions for each node have to be 
+    computed based on arguments \code{(y, w)} where \code{y} is the response and 
+    \code{w} are case weights.}
+  \item{simplify}{
+    a logical indicating whether the resulting list
+                   of predictions should be converted to a suitable
+                   vector or matrix (if possible).}
+  \item{\dots}{ additional arguments. }
+}
+\details{
+
+
+  This implementation of the random forest (and bagging) algorithm differs
+  from the reference implementation in \code{\link[randomForest]{randomForest}}
+  with respect to the base learners used and the aggregation scheme applied.
+
+  Conditional inference trees, see \code{\link{ctree}}, are fitted to each
+  of the \code{ntree} perturbed samples of the learning sample. Most of the hyper parameters in 
+  \code{\link{ctree_control}} regulate the construction of the conditional inference trees.
+
+  Hyper parameters you might want to change are:
+
+  1. The number of randomly preselected variables \code{mtry}, which is fixed
+     to the square root of the number of input variables.
+
+  2. The number of trees \code{ntree}. Use more trees if you have more variables.
+
+  3. The depth of the trees, regulated by \code{mincriterion}. Usually unstopped and unpruned
+     trees are used in random forests. To grow large trees, set \code{mincriterion} to a small value.
+
+  Note that the default values are different from those used in package \code{party}.
+
+  The aggregation scheme works by averaging observation weights extracted
+  from each of the \code{ntree} trees and NOT by averaging predictions directly
+  as in \code{\link[randomForest]{randomForest}}.
+  See Hothorn et al. (2004) and Meinshausen (2006) for a description.
+
+  Predictions can be computed using \code{\link{predict}}. For observations
+  with zero weights, predictions are computed from the fitted tree 
+  when \code{newdata = NULL}. 
+
+  Ensembles of conditional inference trees have not yet been extensively   
+  tested, so this routine is meant for the expert user only and its current
+  state is rather experimental. However, there are some things available 
+  in \code{\link{cforest}} that can't be done with \code{\link[randomForest]{randomForest}},  
+  for example fitting forests to censored response variables (see Hothorn et al., 2004, 2006a) or to
+  multivariate and ordered responses. Using the rich \code{partykit} infrastructure allows 
+  additional functionality in \code{cforest}, such as parallel tree growing and probabilistic 
+  forecasting (for example via quantile regression forests). Also plotting of single trees from
+  a forest is much easier now.
+
+  Moreover, when predictors vary in their scale of measurement of number 
+  of categories, variable selection and computation of variable importance is biased 
+  in favor of variables with many potential cutpoints in \code{\link[randomForest]{randomForest}},
+  while in \code{\link{cforest}} unbiased trees and an adequate resampling scheme
+  are used by default. See Hothorn et al. (2006b) and Strobl et al. (2007)
+  as well as Strobl et al. (2009).
+
+}
+\value{
+  An object of class \code{cforest}.
+}
+\references{
+
+    Leo Breiman (2001). Random Forests. \emph{Machine Learning}, 45(1), 5--32.
+
+    Torsten Hothorn, Berthold Lausen, Axel Benner and Martin Radespiel-Troeger
+    (2004). Bagging Survival Trees. \emph{Statistics in Medicine}, \bold{23}(1), 77--91.
+
+    Torsten Hothorn, Peter Buhlmann, Sandrine Dudoit, Annette Molinaro 
+    and Mark J. van der Laan (2006a). Survival Ensembles. \emph{Biostatistics},
+    \bold{7}(3), 355--373.
+
+    Torsten Hothorn, Kurt Hornik and Achim Zeileis (2006b). Unbiased
+    Recursive Partitioning: A Conditional Inference Framework.
+    \emph{Journal of Computational and Graphical Statistics}, \bold{15}(3),
+    651--674.  Preprint available from 
+    \url{http://statmath.wu-wien.ac.at/~zeileis/papers/Hothorn+Hornik+Zeileis-2006.pdf}
+
+    Nicolai Meinshausen (2006). Quantile Regression Forests. 
+    Journal of Machine Learning Research, \bold{7}, 983--999.
+
+    Carolin Strobl, Anne-Laure Boulesteix, Achim Zeileis and Torsten Hothorn (2007).
+    Bias in Random Forest Variable Importance Measures: Illustrations, Sources and
+    a Solution. \emph{BMC Bioinformatics}, \bold{8}, 25.
+    \url{http://www.biomedcentral.com/1471-2105/8/25}
+
+    Carolin Strobl, James Malley and Gerhard Tutz (2009).
+    An Introduction to Recursive Partitioning: Rationale, Application, and Characteristics of
+    Classification and Regression Trees, Bagging, and Random forests.
+    \emph{Psychological Methods}, \bold{14}(4), 323--348.
+ 
+}
+
+\examples{
+
+### fit conditional inference forest to cars data
+cf <- cforest(dist ~ speed, data = cars)
+
+### predict and plot mean (in-sample)
+p <- predict(cf, newdata = cars, type = "response")
+plot(dist ~ speed, data = cars)
+lines(cars$speed, unlist(p))
+
+### predict quantiles (aka quantile regression forest) and plot them
+myquantile <- function(y, w) quantile(rep(y, w), probs = c(0.1, 0.5, 0.9))
+p <- predict(cf, newdata = cars, type = "response", FUN = myquantile)
+plot(dist ~ speed, data = cars)
+lines(cars$speed, p[,1])
+lines(cars$speed, p[,2])
+lines(cars$speed, p[,3])
+
+### we may also use predicted conditional densities
+mydensity <- partykit:::.pred_density
+p <- predict(cf, newdata = cars, type = "response", FUN = mydensity)
+for (i in 1:length(p)) 
+    plot(p[[i]], xlim = c(-10, 150), ylim = c(0, .025))
+
+### honest (i.e., out-of-bag) cross-classification of
+### true vs. predicted classes
+data("mammoexp", package = "TH.data")
+table(mammoexp$ME, predict(cforest(ME ~ ., data = mammoexp, ntree = 50),
+                           OOB = TRUE, type = "response"))
+
+### fit forest to censored response
+if (require("TH.data") && require("survival")) {
+
+    data("GBSG2", package = "TH.data")
+    bst <- cforest(Surv(time, cens) ~ ., data = GBSG2, ntree = 50)
+ 
+    ### estimate conditional Kaplan-Meier curves
+    print(predict(bst, newdata = GBSG2[1:2,], OOB = TRUE, type = "prob"))
+
+    print(bst$nodes[[1]])
+}
+}
+\keyword{tree}
